<resources>
    <string name="app_name">laundry</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nameHolder">Bowo Ril</string>
    <string name="addressHolder">Jawa Tengah</string>
    <string name="phoneHolder">081234567890</string>
    <string name="name">Name:</string>
    <string name="address">Address:</string>
    <string name="phone">Phone:</string>
</resources>